# testingStuff

./: Expenses01.xlsx  Expenses02.xlsx  GitHub_activity.graphql  main.py  pyproject.toml  sampleresults.json  spreadsheet_test.csv  test.py  test_Pandaspreadsheet.csv  test_Pandaspreadsheet1.csv  test_Pandaspreadsheet10.csv  test_Pandaspreadsheet11.csv  test_Pandaspreadsheet12.csv  test_Pandaspreadsheet13.csv  test_Pandaspreadsheet15.csv  test_Pandaspreadsheet2.csv  test_Pandaspreadsheet3.csv  test_Pandaspreadsheet5.csv  test_Pandaspreadsheet6.csv  test_Pandaspreadsheet9.csv  test_spreadsheet.csv
